--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SECRET_KEY=mystrongkey
 FLASK_APP = flask_app.py
 FLASK_ENV=development
+FIREBASE_KEY=FirebaseApi/atomic-odyssey-firebase-adminsdk-fbsvc-6ac5414c03.json
