--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ __pycache__/
 
 # Firebase keys
 FirebaseApi/atomic-odyssey-3d061-firebase-adminsdk-fbsvc-64b12f17f8.json
+FirebaseApi/tofis-app-firebase-adminsdk-fbsvc-e1ccd29a7c.json
 StorageApi/tofis-app-firebase-adminsdk-fbsvc-e1ccd29a7c.json
 # VSCode
 .vscode/
